# Ylab_Email_reader_bot

./: .env.example  README.md  docker-compose.yml  pyproject.toml
bot/: api_client.py  config.py  keyboards.py  loader.py  main.py  states.py
bot/crypto/: crypto_service.py
bot/handlers/user/: common.py  my_boxes.py  new_box.py  new_user.py  utils.py  validators.py
bot/middleware/: __init__.py  api_middleware.py  throttling_middleware.py
email_bot_web/: Dockerfile  entrypoint.sh
email_bot_web/api/v1/: mail.py  schemas.py  urls.py  user.py
email_bot_web/core/: asgi.py  settings.py  urls.py
email_bot_web/email_service/: admin.py  admin_actions.py  models.py  repository.py  schemas.py  service.py
email_bot_web/email_service/migrations/: 0002_emailbox_is_active.py  0003_alter_emailbox_email_username.py
email_bot_web/infrastructure/: crypto_service.py  error_messages.py  exceptions.py  imap_service.py  redis_service.py  repository.py  sender.py  tasks.py  template.py  utils.py
email_bot_web/user/: admin.py  admin_actions.py  models.py  repository.py  schemas.py  service.py
